<resources>
    <string name="app_name">Tarea1</string>

    <string name="hello_world">Gestión de Actividades-FIA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_asignacion_menu">asignacionMenu</string>
    <string name="title_activity_asignacion_insertar">AsignacionInsertarActivity</string>
    <string name="title_activity_asignacion_consultar">AsignacionConsultarActivity</string>

    <!--Valoracion-->
    <string name="title_activity_valoracion_menu">valoracionMenu</string>
    <string name="title_activity_insetar_valoracion">InsertarValoracionActivity</string>
    <string name="idValoración">idValoración</string>
    <string name="idTipoValoración">idTipoValoración</string>
    <string name="idAsignaciónLocal">idAsignaciónLocal</string>
    <string name="idPersona">idPersona</string>
    <string name="descripciónValoración">Descripción Valoración</string>


    <!--CRUD-->
    <string name="insertar">Insertar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizarHost">Actualizar en Host</string>
    <string name="consultar">Consultar</string>
    <string name="limpiar">Limpiar</string>
    <string name="insertar_registro">Insertar Registro</string>
    <string name="insertarHost">Insertar En Host</string>
    <string name="eliminar_registro">Eliminar Registro</string>
    <string name="consultar_registro">Consultar Registro</string>
    <string name="actualizar_registro">Actualizar Registro</string>

    <!-- Recursos de TipoPersona-->
    <string name="title_activity_tipo_persona_menu">TipoPersonaMenuActivity</string>
    <string name="title_activity_tipo_persona_insertar">TipoPersonaInsertarActivity</string>
    <string name="title_activity_tipo_persona_consultar">TipoPersonaConsultarActivity</string>
    <string name="title_activity_tipo_persona_actualizar">TipoPersonaActualizarActivity</string>
    <string name="title_activity_tipo_persona_eliminar">TipoPersonaEliminarActivity</string>
    <string name="codigo">Codigo</string>
    <string name="tipo_persona">Tipo Persona:</string>
    <string name="descripcion">Descripcion:</string>


    <!--Fin TipoPersona -->


    <!-- Recursos de Persona -->
    <string name="title_activity_persona_menu">PersonaMenuActivity</string>
    <string name="title_activity_persona_insertar">PersonaInsertarActivity</string>

    <string name="id_persona">Cod. Persona:</string>
    <string name="id_tipo_persona">Tipo Persona:</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="dui">DUI:</string>
    <string name="grado_academico">Grado Academico:</string>
    <string name="genero">Genero:</string>
    <string name="email">Email:</string>

    <!--Fin Persona-->

    <!-- Recursos de Actividad -->
    <string name="title_activity_actividad_menu">ActividadMenuActivity</string>
    <string name="title_activity_actividad_insertar">ActividadInsertarActivity</string>
    <string name="title_activity_tipo_actividad_consultar">ActividadConsultarActivity</string>
    <string name="title_activity_tipo_actividad_actualizar">ActividadActualizarActivity</string>
    <string name="title_activity_tipo_actividad_eliminar">ActividadEliminarActivity</string>
    <string name="id_actividad">Id. Actividad:</string>
    <string name="id_tipo_actividad">Tipo Actividad:</string>
    <string name="id_persona_responsable">Responsable:</string>
    <string name="fecha">Fecha:</string>
    <string name="eliminarHost">Eliminar en Host</string>


    <!--Fin Actividad-->

    <!--Ciclo y DisponibilidadCiclo-->

    <string name="title_activity_ciclo_menu">CicloMenuActivity</string>
    <string name="title_activity_ciclo_actualizar">CicloActualizarActivity</string>
    <string name="title_activity_ciclo_eliminar">CicloEliminarActivity</string>
    <string name="title_activity_ciclo_insertar">CicloInsertarActivity</string>
    <string name="title_activity_ciclo_consultar">CicloConsultarrActivity</string>
    <string name="idciclo">Codigo de ciclo</string>
    <string name="ciclo">Numero de ciclo</string>
    <string name="iddisponibilidad">id Disponibiblidad</string>
    <string name="idhorario">id Horario</string>
    <string name="idlocal">id local</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="opciones">Opciones</string>

    <!--Fin Ciclo y DisponibilidadCiclo-->


    <string name="title_activity_asignacion_borrar">AsignacionBorrar</string>
    <string name="title_activity_asignacion_moficar">AsignacionMoficar</string>
    <string name="title_activity_horario_menu">horarioMenu</string>
    <string name="title_activity_horario_insertar">HorarioInsertar</string>
    <string name="title_activity_horario_consultar">HorarioConsultar</string>
    <string name="title_activity_horario_actualizar">HorarioActualizar</string>
    <string name="title_activity_horario_eliminar">HorarioEliminar</string>

    <string-array name="Games">
        <item>League of Legends</item>
        <item>Diablo III</item>
        <item>God of War</item>
        <item>Halo 4</item>
        <item>StarCraft II</item>
    </string-array>
    <string name="title_activity_local">local</string>
    <string name="title_activity_local_insertar">LocalInsertar</string>
    <string name="title_activity_local_consultar">LocalConsultar</string>
    <string name="title_activity_local_actualizar">LocalActualizar</string>
    <string name="title_activity_local_eliminar">LocalEliminar</string>
    <string name="title_activity_log_ing">Grupo 16</string>

    <string name="title_activity_web_asignacion_acitivdad">webAsignacionAcitivdad</string>
    <string name="title_activity_webasignacion_horarios">webasignacionHorarios</string>


</resources>
