<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/iddisponibilidad"/>
        <EditText
            android:id="@+id/editiddisp"
            android:inputType="text" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idciclo"/>
        <EditText
            android:id="@+id/idciclo"
            android:inputType="text"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idhorario"/>
        <EditText
            android:id="@+id/idhorario"
            android:inputType="text"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idlocal"/>
        <EditText
            android:id="@+id/idLocal"
            android:inputType="text"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/disponibilidad"/>
        <EditText
            android:id="@+id/disponibilidad"
            android:inputType="text"
            android:maxLength="50"/>
    </TableRow>
    <Button
        android:onClick="insertarDisponibilidad"
        android:text="@string/insertar" />
    <Button
        android:onClick="insertarDisponibilidadHost"
        android:text="@string/insertarHost" />
    <Button
        android:onClick="limpiarTexto"
        android:text="@string/limpiar" />

</TableLayout>
