<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_persona"/>
        <EditText
            android:id="@+id/editIdPersona"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_tipo_persona" />
        <Spinner  android:id="@+id/spinner_tipo_persona"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>


        <!--<EditText
            android:id="@+id/editIdTipoPersona"
            android:inputType="text"
            android:maxLength="30" />-->
    </TableRow>
    <TableRow>
        <TextView android:text="@string/nombre" />
        <EditText
            android:id="@+id/editNombre"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/apellido" />
        <EditText
            android:id="@+id/editApellido"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/dui" />
        <EditText
            android:id="@+id/editDui"
            android:inputType="text"
            android:maxLength="10" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/grado_academico" />
        <EditText
            android:id="@+id/editGradoAcademico"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/genero" />
        <EditText
            android:id="@+id/editGenero"
            android:inputType="text"
            android:maxLength="1" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/email" />
        <EditText
            android:id="@+id/editEmail"
            android:inputType="text"
            android:maxLength="50" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="actualizarPersona"
            android:text="@string/actualizar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>