<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/id_actividad"/>
        <EditText
            android:id="@+id/editIdActividad"
            android:inputType="text"
            android:enabled="false"
            android:focusable="false"
            android:maxLength="7"
             />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_tipo_actividad" />
        <Spinner  android:id="@+id/spinner_tipo_actividad"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>



    </TableRow>
    <TableRow>
        <TextView android:text="@string/id_persona_responsable" />
        <Spinner  android:id="@+id/spinner_id_persona"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/descripcion" />


            <EditText
                android:id="@+id/editDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="3"
                android:gravity="top|left"
                android:inputType="textMultiLine"

                android:maxLength="500" />




    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarActividad"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>