<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idciclo" />
        <EditText
            android:id="@+id/editIdCiclo"
            android:inputType="text"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
    <TextView android:text="@string/ciclo" />
    <EditText
        android:id="@+id/editCiclo"
        android:inputType="text"
        android:maxLength="6" />
</TableRow>
<TableRow>
<Button
    android:onClick="actualizarCiclo"
    android:text="@string/actualizar" />
</TableRow>
<TableRow>
<Button
    android:onClick="limpiarTexto"
    android:text="@string/limpiar" />
</TableRow>
    </TableLayout>
