<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idciclo"/>
        <EditText
            android:id="@+id/editIdCiclo"
            android:inputType="number"
            android:maxLength="6" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/ciclo" />
        <EditText
            android:id="@+id/editCiclo"
            android:inputType="number"
            android:maxLength="2" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="insertarCiclo"
            android:text="@string/insertar" />
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
</TableLayout>