<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idciclo"/>
    <EditText
        android:id="@+id/edtidciclo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="6"/>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnconsultar"
        android:text="@string/consultar"
        android:onClick="consultarCiclo"/>
   <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnlimpiar"
        android:text="@string/limpiar"
        android:onClick="limpiarTexto"/>


  </LinearLayout>
<TextView
   android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:text="@string/ciclo"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtciclo"
        android:focusable="false"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:cursorVisible="false"
        android:longClickable="false"/>



</LinearLayout>


