<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:paddingTop="4dip"
    >
    <TableRow >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idciclo"/>
        <EditText
            android:id="@+id/editidciclo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="6"/>
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/eliminar"
            android:onClick="eliminarCiclo"/>
        <Button
            android:layout_width="wrap_content"
            android:text="@string/limpiar"
            android:onClick="limpiar"/>
    </TableRow>
</TableLayout>