<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:stretchColumns="1" >
    <TableRow>
        <TextView android:text="@string/idTipoValoración" />
        <EditText
            android:id="@+id/idTipoValoracion"
            android:inputType="text"
            android:maxLength="7" />
    </TableRow>
    <TableRow>
        <TextView android:text="Tipo de Valoración :" />
        <EditText
            android:id="@+id/tipoValoracion"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>
    <TableRow>
        <TextView android:text="Descripción :" />
        <EditText
            android:id="@+id/descripcionTipoValoracion"
            android:inputType="text"
            android:maxLength="30" />
    </TableRow>

    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
        <Button
            android:onClick="actualizarTipoValoracion"
            android:text="@string/actualizar" />
    </TableRow>

</TableLayout>